# GolfSwingCoachLLM

./: .gitattributes  .gitignore  FILE_TREE.md  Makefile  README.md  docker-compose.yml  reset_docker.sh
.github/workflows/: ci-cd.yml  deploy.yml  infrastructure.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  setup_env.sh  test.db  test_frames.db
backend/app/: main.py
backend/app/api/: upload.py
backend/app/core/: config.py  db_init.py  metric_stats.py  swing_matcher.py  swing_vector.py
backend/app/metric_distribution/: __init__.py  build_vector_db.py  driver_dtl_with_keypoints.csv  generate_distributions.py  result.csv  swing_flaws.json
backend/app/ml/: __init__.py  inference.py  latest_model__epoch_20.pth  model.py  preprocessing.py  service.py
backend/app/models/: __init__.py  frame.py  swing_pattern.py  video.py
backend/app/processing/: __init__.py  frames.py  pose_estimation.py  queue.py  swing_metrics.py
backend/app/schemas/: __init__.py  frame.py  swing_flaw.py  video.py
backend/app/services/: aws.py  openai_service.py
backend/app/tests/: conftest.py  test_frames.py  test_main.py  test_metrics_from_json.py  test_model_inference.py  test_points_1392.json  test_pose_estimation.py  test_swing_metrics.py  test_upload.py
data/drills/: example.yaml
frontend/: .dockerignore  .prettierrc  Dockerfile  Dockerfile.prod  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/results/[videoId]/: page.tsx
frontend/app/upload/: page.tsx
infra/: README.md  build-and-push.sh  main.tf  setup-route53.sh  start-resources.sh  stop-resources.sh  variables.tf
